{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 489,
  "lineage": "2bd1c4ef-29bb-aa90-2f3a-59e2ce297e98",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webServer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0750a20e9959e44ff",
            "arn": "arn:aws:ec2:ap-southeast-1:586587280651:instance/i-0e9ce0e9d0269118e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e9ce0e9d0269118e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ap-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04b049e2d8993fe48",
            "private_dns": "ip-10-0-0-9.ap-southeast-1.compute.internal",
            "private_ip": "10.0.0.9",
            "public_dns": "ec2-13-212-11-119.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.212.11.119",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ade803e3a3ad28ce",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00c5c30e05ee9a2f7",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a8813793b4b1561a"
            ]
          },
          "dependencies": [
            "aws_key_pair.ap-kp",
            "aws_security_group.dd-securitygroup",
            "aws_subnet.dd-subnet-1",
            "data.template_file.user_data"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dd-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:586587280651:internet-gateway/igw-0243321ad0b5d955d",
            "id": "igw-0243321ad0b5d955d",
            "owner_id": "586587280651",
            "tags": {
              "Name": "dd-igw"
            },
            "tags_all": {
              "Name": "dd-igw"
            },
            "vpc_id": "vpc-01268fa10c03f3b45"
          },
          "dependencies": [
            "aws_vpc.dd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dd-crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:586587280651:route-table/rtb-023d2dc48d4bc5147",
            "id": "rtb-023d2dc48d4bc5147",
            "owner_id": "586587280651",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0243321ad0b5d955d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dd-crt"
            },
            "tags_all": {
              "Name": "dd-crt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01268fa10c03f3b45"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dd-igw",
            "aws_vpc.dd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dd-crt-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec7c9f6b8b3ae16f",
            "route_table_id": "rtb-023d2dc48d4bc5147",
            "subnet_id": "subnet-00c5c30e05ee9a2f7"
          },
          "dependencies": [
            "aws_internet_gateway.dd-igw",
            "aws_route_table.dd-crt",
            "aws_subnet.dd-subnet-1",
            "aws_vpc.dd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dd-securitygroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:586587280651:security-group/sg-0a8813793b4b1561a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0a8813793b4b1561a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 1028,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1028
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20220614151913642600000002",
            "name_prefix": "terraform-",
            "owner_id": "586587280651",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01268fa10c03f3b45"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dd-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:586587280651:subnet/subnet-00c5c30e05ee9a2f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c5c30e05ee9a2f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "586587280651",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-01268fa10c03f3b45"
          },
          "dependencies": [
            "aws_vpc.dd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dd-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:586587280651:vpc/vpc-01268fa10c03f3b45",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/28",
            "default_network_acl_id": "acl-00032ad85eb55d9ef",
            "default_route_table_id": "rtb-07aa1bf471e0ef69d",
            "default_security_group_id": "sg-0b8f0dab2640556fa",
            "dhcp_options_id": "dopt-0e9774416cdfc2e42",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01268fa10c03f3b45",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07aa1bf471e0ef69d",
            "owner_id": "586587280651"
          }
        }
      ]
    }
  ]
}